# query-autocomplete

./: .gitignore  .readthedocs.yaml  README.md  RELEASING.md  mkdocs.yml
.github/workflows/: release.yml
benchmarks/: bench.py  get_wikitext_data.py
core/src/query_autocomplete/: __init__.py  __main__.py  adaptive.py  adaptive_storage.py  artifacts.py  binary_format.py  builder.py  config.py  engine.py  input_types.py  models.py  runtime.py  sample_corpus.py
core/src/query_autocomplete/generation/: beam.py
core/src/query_autocomplete/indexing/: prefix_index.py
core/src/query_autocomplete/preprocessing/: file_reader.py  preprocess.py
core/src/query_autocomplete/reranking/: __init__.py  base.py  heuristic.py
core/src/query_autocomplete/scoring/: __init__.py  base.py  local_scorer.py
core/src/query_autocomplete/utils/: dedupe.py
docs/: index.md
python-package/: LICENSE  README.md  THIRD_PARTY_LICENSES.md  hatch_build.py  pyproject.toml
tests/: test_adaptive_sql.py  test_file_reader.py  test_local_scorer.py  test_packaging_smoke.py  test_persistence.py  test_prefix_index.py  test_quality_runtime.py  test_reranking.py  test_support.py  test_vocab_prune.py
